# TrialMatchAI

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  LICENSE  MICHIGAN_INTEGRATION.md  Makefile  README.md  REFACTOR_PLAN.md  SECURITY.md  config.json  docker-compose.yml  final-report-analysis.md  href-test.js  index.html  js-test-manual.txt  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.sh  sitemap.xml  test-analysis.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
api/: index.html
architecture/: index.html
benchmarks/embedders/: bge-m3-vw0.6.json  medcpt-vw0.6.json  pubmedbert-neuml-vw0.6.json  qwen3-0.6b-vw0.6.json  registry.json
biomedner_services/: run_biomedner.sh  stop_biomedner.sh
data/regex/: exception_regex_patterns.json
docker/: .env
docker/certs/ca/: ca.key
docker/certs/es01/: es01.key
docker/certs/es02/: es02.crt  es02.key
docker/certs/es03/: es03.crt
docs/: HLD.md  api.md  architecture.md  finetuning.md  index.md  interoperability.md  pipeline.md  registry-updater.md  release.md
elasticsearch/: .env.example  apptainer-run-es.sh  docker-compose.dev.yml  docker-compose.yml  run-es.sh
elasticsearch/certs/es01/: es01.crt
elasticsearch/certs/es03/: es03.key
elasticsearch/elasticsearch/: .env
example/patient_x/: phenopacket.json
finetuning/: index.html
finetuning/finetune_instruct/: arguments.py  data.py  data_llama.py  data_summary.py  evaluate.py  evaluate_CoT.py  evaluate_gemma2.py  evaluate_llama.py  finetune.sh  finetune_unsloth.sh  load_model.py  modeling.py  run.py  split_train_test.py  trainer.py
finetuning/finetune_instruct/finetuning_data/: incorrect_predictions.jsonl
finetuning/finetune_instruct/finetuninig_data/: cleaned_filtered_test_data.jsonl  filtered_test_data.jsonl
finetuning/finetune_ner/: evaluate.py  finetune.py  models.py  run_evaluate.sh  run_finetune.sh  utils.py
interoperability/: index.html
pipeline/: index.html
registry-updater/: index.html
release/: index.html
results/patient_x/: first_level_scores.json  keywords.json  nct_ids.txt  top_trials.txt
scripts/: benchmark_embedder.py  bootstrap_data.sh  index_data.sh  plot_embedder_recall.py  scan_secrets.py  start_es.sh
search/: search_index.json
source/Matcher/: main.py
source/Matcher/cli/: build_concepts.py  healthcheck.py  index_data.py  (+1 more)
source/Parser/: biomedner_engine.py  biomedner_init.py  biomedner_server.py  main.py  normalizer.py
source/biomedner_services/: run_biomedner.sh
src/: .env  LangChain_trial.ipynb  SyntheticData.ipynb  add_parsed_eligibility_to_json.py  chromaDB_embedding.py  chromaDB_trial.py  connect_to_mongodb.py  documents.json  download.py  entity_recognition.py  fine-tune-data.ipynb  inference.ipynb  jsonify.py  langchain_demo.py  main.py  mongodb_vector_embedded.py  neg_example.py  nohup.out  preprocess_clinical_notes.py  preprocessing_utils.py  queries.json  reco.py  retrieve_example.ipynb
src/DataLoader/: download.py  downloader.py  nct_ids.txt  phenopakcets.py  requirements.txt  trial.ipynb
src/Embedder/: chromaDB_embedding.py  example.ipynb
src/Indexer/: config.json  flatten.py  index_criteria.py  index_trials.py  nct_ids.txt  prepare_criteria.py  prepare_trials.py
src/MISC/: GenerateNewSynthetic.ipynb
src/Matcher/: AsyncElasticSearchRetriever.py  BM25.py  ElasticSearch.ipynb  ElasticSearch.py  LangChain_QARetrieval.ipynb  LangChain_structuting_queries.ipynb  ParentDocumentMatcher.ipynb  __init__.py  cot_reasoning.py  criteria_retriever.py  crossencoder_reranker.py  database_builder.py  documents.pkl  elasticsearchtrials.py  exclusion.pkl  final_ranked_trials.pkl  first_level.py  inclusion.pkl  index_mapping.txt  llm_reranker.py  main.py  msearch.py  nct_ids.txt  parse_and_augment.py  reindex.py  results.txt  retrieve_criteria.py  second_level.py  structure_query.py  summary_rag.py  trial_level_rank.py  trial_level_search.py  trial_ranker.py  trials_indexer.py
src/Parser/: Untitled-1.ipynb  bern2.py  biomedner_engine.py  biomedner_init.py  biomedner_run.py  biomedner_server.py  convert.py  entity_recognition.py  example.ipynb  gner_server.py  maccrobat_engine.py  maccrobat_ner.py  maccrobat_server.py  main.py  models.py  multiner_server.py  ner_server.py  normalizer.py  ops.py  requirements.txt  test.ipynb  tmvar_ner.py  tmvar_server.py
src/Preporcessor/: preprocessing.py  preprocessing_utils.py  requirements.txt
src/Preprocessor/: jsonify.py  preprocessing.py  preprocessing_utils.py  utils.py
src/misc-er/: gpt_generate_ideal_candidates.py
src/trialmatchai/: __main__.py  linking.py  main.py  orchestration.py  pipeline.py  plugins.py
src/utils/: GenerateNewSynthetic.ipynb  SyntheticData.ipynb  add_parsed_eligibility_to_json.py  fine-tune-data.ipynb  jsonify.py  misc.py
tests/: conftest.py  test_audit_fixes.py  test_audit_fixes_batch8.py  test_audit_fixes_reaudit.py  test_bm25_fusion.py  test_bootstrap_data.py  test_concept_sources.py  test_concept_store.py  test_config_pytest.py  test_constraint_exclusion_aggregation.py  test_constraints.py  test_criteria_chunking.py  test_deployment_readiness.py  test_download.py  test_eligibility_vllm.py  test_embedder_contract.py  test_embedding.py  test_entities.py  test_fhir_robustness.py  test_file_utils_pytest.py  test_finetuning.py  test_first_level_planner.py  test_first_level_search_pytest.py  test_html_report.py  test_import_patient_cli.py  test_index_provenance.py  test_interop_fixtures.py  test_lancedb_search_backend.py  test_linking.py  test_llm_common.py  test_location_filter.py  test_logging.py  test_logging_pytest.py  test_medium_bug_fixes.py  test_metrics.py  test_model_catalog.py  test_model_helpers.py  test_package_imports.py  test_patient_interop.py  test_patient_runtime_loading.py  (+22 more)
utils/Indexer/: config.json  es_config.py  index_criteria.py  index_trials.py  prepare_criteria.py
utils/Preprocessor/: utils.py
utils/gpt/: gpt-generate-summaries.py  gpt_generate_ideal_candidates.py  gpt_generate_reranking_data.py
(+273 files in other folders)
