[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trialmatchai"
version = "0.2.0"
description = "AI-driven clinical trial matching pipeline."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "numpy>=2.0,<3",
  "pandas==2.2.3",
  "python-dateutil==2.9.0.post0",
  "requests==2.34.2",
  "tenacity==9.0.0",
  "tqdm==4.67.1",
  "regex>=2025.10.22,<2027",
  "PyYAML==6.0.2",
  "python-dotenv==1.2.2",
  "rich==13.9.4",
  "lancedb>=0.25.0,<0.26",
  "pyarrow>=24.0.0,<25",
  "pydantic>=2.12.0,<3",
  "bioregistry==0.13.62",
  "rapidfuzz==3.14.5",
]

[project.optional-dependencies]
gpu = [
  "bitsandbytes==0.49.2; sys_platform == 'linux' or sys_platform == 'win32'",
  "vllm==0.23.0; sys_platform == 'linux'",
]
llm = [
  "torch==2.11.0",
  "transformers==5.6.2",
  "accelerate==1.8.1",
  "tokenizers==0.22.1",
  "safetensors>=0.6.2,<0.7",
  "sentencepiece==0.2.1",
  "peft==0.15.2",
  "einops==0.8.0",
]
entity = [
  "torch==2.11.0",
  "transformers==5.6.2",
  "gliner==0.2.27",
  "gliner2>=1.3.1,<2",
]

[project.scripts]
trialmatchai = "trialmatchai.cli.main:main"
trialmatchai-healthcheck = "trialmatchai.cli.healthcheck:main"
trialmatchai-run = "trialmatchai.cli.run:main"
trialmatchai-bootstrap-data = "trialmatchai.cli.bootstrap_data:main"
trialmatchai-index = "trialmatchai.cli.index_data:main"
trialmatchai-build-concepts = "trialmatchai.cli.build_concepts:main"
trialmatchai-update-registry = "trialmatchai.cli.update_registry:main"
trialmatchai-import-patient = "trialmatchai.cli.import_patient:main"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.9.0",
  "pip-audit>=2.7.3",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trialmatchai = [
  "config/*.json",
  "entity_schemas/*.yaml",
  "preprocessing/regex/*.json",
  "preprocessing/regex/*.tsv",
]

[tool.uv]
environments = [
  "sys_platform == 'darwin'",
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
