[build-system]
# >=77 for PEP 639 SPDX license metadata (license = "MIT" + license-files).
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trialmatchai"
version = "0.3.0"
description = "AI-driven patient-to-clinical-trial matching: hybrid retrieval + LLM eligibility reasoning."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Majd Abdallah", email = "abdallahmajd7@gmail.com" }]
keywords = [
  "clinical-trials",
  "patient-trial-matching",
  "biomedical-nlp",
  "information-retrieval",
  "large-language-models",
  "eligibility",
  "healthcare",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Science/Research",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=2.0,<3",
  "pandas==2.2.3",
  "python-dateutil==2.9.0.post0",
  "python-dotenv>=1.0,<2",
  "requests==2.34.2",
  "tenacity==9.0.0",
  "tqdm==4.67.1",
  "PyYAML==6.0.2",
  "lancedb>=0.25.0,<0.26",
  "pyarrow>=24.0.0,<25",
  "pydantic>=2.12.0,<3",
]

[project.optional-dependencies]
gpu = [
  "bitsandbytes==0.49.2; sys_platform == 'linux' or sys_platform == 'win32'",
  "vllm==0.23.0; sys_platform == 'linux'",
]
llm = [
  "torch==2.11.0",
  "transformers==5.6.2",
  "accelerate==1.8.1",
  "tokenizers==0.22.1",
  "safetensors>=0.6.2,<0.7",
  "sentencepiece==0.2.1",
  "peft==0.15.2",
  "einops==0.8.0",
]
entity = [
  "torch==2.11.0",
  "transformers==5.6.2",
  "gliner2>=1.3.1,<2",
]
finetune = [
  "torch==2.11.0",
  "transformers==5.6.2",
  "accelerate==1.8.1",
  "peft==0.15.2",
  "datasets>=3.0,<5",
  "gliner2>=1.3.1,<2",
  "bitsandbytes==0.49.2; sys_platform == 'linux' or sys_platform == 'win32'",
]

[project.scripts]
# Single entry point. Every capability is a subcommand: `trialmatchai <cmd>`
# (pipeline, healthcheck, bootstrap-data, index, build-concepts, update-registry,
# import-patient, build, run, e2e, trec, report, finetune).
trialmatchai = "trialmatchai.cli.main:main"

[project.urls]
Homepage = "https://github.com/cbib/TrialMatchAI"
Repository = "https://github.com/cbib/TrialMatchAI"
Issues = "https://github.com/cbib/TrialMatchAI/issues"
Paper = "https://doi.org/10.1038/s41467-026-70509-w"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.9.0",
  "pip-audit>=2.7.3",
  "pre-commit>=4.0",
]
docs = [
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.26",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trialmatchai = [
  "config/*.json",
  "entity_schemas/*.yaml",
  "entities/resources/*.tsv",
  "interop/exporters/templates/*.html",
  "interop/exporters/templates/*.png",
]

[tool.uv]
environments = [
  "sys_platform == 'darwin'",
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
